adding a timer element to the HTML

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
 
 <h1>Code Quiz</h1>
+<p>Instructions:You will have 5 minutes to complete this JavaScript Code Quiz. Each time you answer incorrectly 5 seconds will be deducted from your time. To move on to the next question select the Next button. Click start to begin. </p>
+
+<h3 id="timer">Timer</h3>
+<div id="minutes"></div>
+<div id="seconds"></div>
 
 <h2 class="questions" id="Q1"></h2>
 
