adding an input and count for correct answers

--- a/index.html
+++ b/index.html
@@ -27,10 +27,17 @@
     <h1 id="correct"></h1>
     <h1 id="wrong"></h1>
 </div>
+<div class= results>
+    <h3 id= "totalScore">Total Score:</h3>
+</div>
+<input type="text" id="resultPg"></input>
+
 
 <br>
 <button class="button" id="StaBtn">Start</button>
 <button class="button" id="nextBtn">Next</button>
+
+
 
 
 
