--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodingQuiz</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
 </head>
 <body>
 
 <h1>Code Quiz</h1>
 <p>Instructions:You will have 5 minutes to complete this JavaScript Code Quiz. Each time you answer incorrectly 5 seconds will be deducted from your time. To move on to the next question select the Next button. Click start to begin. </p>
 
-<h3 id="timer">Timer</h3>
+
+<h3 id="timer">Timer: 5:00</h3>
 <div id="minutes"></div>
 <div id="seconds"></div>
 
@@ -21,7 +24,8 @@
     <button class="choices" id="elA"></button>
     <button class="choices" id="elB"></button>
     <button class="choices" id="elC"></button>
-    <button class="choices" id="elD"></button>  
+    <button class="choices" id="elD"></button>
+    <button class="choices" id="elE"></button>   
 </div>
 <div class="answer">
     <h1 id="correct"></h1>
@@ -37,8 +41,7 @@
 <button class="button" id="StaBtn">Start</button>
 <button class="button" id="nextBtn">Next</button>
 
-
-
+<!--timer code-->
 
 
 
