--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodingQuiz</title>
     <link rel="stylesheet" href="style.css">
+    <!--
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    -->
 
 </head>
 <body>
@@ -34,14 +36,13 @@
 <div class= results>
     <h3 id= "totalScore">Total Score:</h3>
 </div>
+<h3 id="initals">Initials</h3>
 <input type="text" id="resultPg"></input>
 
 
 <br>
 <button class="button" id="StaBtn">Start</button>
 <button class="button" id="nextBtn">Next</button>
-
-<!--timer code-->
 
 
 
